add docs and remove unnecessary comments
